response fix for clothing wrap

--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -344,7 +344,7 @@ footer.row{
 }
 
 .clothing-item-wrap{
-  max-height:400px;
+  height: 440px;
   transition: 300ms;
   &:hover{
     transform: scale(1.1);
